enable reclaim & exec
