# openapi/arl-api.yaml
@@ -249,6 +249,10 @@ components:
           type: integer
         keepAlive:
           type: boolean
+        maxLifetimeSeconds:
+          format: int32
+          minimum: 0
+          type: integer
         poolRef:
           type: string
         resources:
